force-app/main/default/objects/Opportunity/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application ID</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>