force-app/main/default/objects/Opportunity/fields/Expected_Rate__c.field-meta.xml
<CustomField>
    <fullName>Expected_Rate__c</fullName>
    <label>Expected Rate</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>