force-app/main/default/objects/Opportunity/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Out</fullName>
            </value>
            <value>
                <fullName>Consolidation</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>