force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Not Proceeding</fullName>
            </value>
            <value>
                <fullName>Other Lender</fullName>
            </value>
            <value>
                <fullName>Outside ORDE Policy</fullName>
            </value>
            <value>
                <fullName>Servicing</fullName>
            </value>
            <value>
                <fullName>Outside Max LVR</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Security location</fullName>
            </value>
            <value>
                <fullName>Fund Opportunity</fullName>
            </value>
            <value>
                <fullName>Outside ORDE Credit Policy</fullName>
            </value>
            <value>
                <fullName>Outside COVID Credit Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>