force-app/main/default/objects/Opportunity/fields/LVR__c.field-meta.xml
<CustomField>
    <fullName>LVR__c</fullName>
    <label>LVR</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>