force-app/main/default/objects/Opportunity/fields/LVR_is_excl_GST__c.field-meta.xml
<CustomField>
    <fullName>LVR_is_excl_GST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LVR is excl GST</label>
    <type>Checkbox</type>
</CustomField>