force-app/main/default/objects/Opportunity/fields/Other_Lender_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Lender_Name__c</fullName>
    <label>Other Lender Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>