force-app/main/default/objects/Opportunity/fields/Other_Lender_Rate__c.field-meta.xml
<CustomField>
    <fullName>Other_Lender_Rate__c</fullName>
    <label>Other Lender Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>