force-app/main/default/objects/Opportunity/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Commercial IO</fullName>
            </value>
            <value>
                <fullName>Construction and Development</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Residential Construction</fullName>
            </value>
            <value>
                <fullName>Residential IO</fullName>
            </value>
            <value>
                <fullName>SMSF Commercial</fullName>
            </value>
            <value>
                <fullName>SMSF Residential</fullName>
            </value>
            <value>
                <fullName>Highest &amp; Best Use - Commercial</fullName>
            </value>
            <value>
                <fullName>Highest &amp; Best Use - Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>