force-app/main/default/objects/Opportunity/fields/Rate_Difference__c.field-meta.xml
<CustomField>
    <fullName>Rate_Difference__c</fullName>
    <formula>Expected_Rate__c - Other_Lender_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>