force-app/main/default/objects/Opportunity/fields/Risk_Grade__c.field-meta.xml
<CustomField>
    <fullName>Risk_Grade__c</fullName>
    <label>Risk Grade</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Near Prime</fullName>
            </value>
            <value>
                <fullName>Near Prime +</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Specialist +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>