force-app/main/default/objects/Opportunity/fields/Verfication__c.field-meta.xml
<CustomField>
    <fullName>Verfication__c</fullName>
    <label>Verfication</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Doc</fullName>
            </value>
            <value>
                <fullName>Alt Doc</fullName>
            </value>
            <value>
                <fullName>Lease Doc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>