force-app/main/default/objects/Opportunity/recordTypes/Loan_Scenario.recordType-meta.xml
<RecordType>
    <fullName>Loan_Scenario</fullName>
    <active>true</active>
    <businessProcess>Loan Scenario</businessProcess>
    <description>For Loan Scenarios</description>
    <label>Loan Scenario</label>
</RecordType>