force-app/main/default/objects/Opportunity/validationRules/Closed_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost</fullName>
    <active>true</active>
    <description>If Closed Lost Lost Reason Must Have Value</description>
    <errorConditionFormula>AND( ISPICKVAL( StageName, &quot;Closed Lost&quot;), ISBLANK(TEXT( Lost_Reason__c )))</errorConditionFormula>
    <errorMessage>You must have an Lost Reason entered to change status to Lost</errorMessage>
</ValidationRule>