force-app/main/default/objects/Opportunity/validationRules/Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won</fullName>
    <active>true</active>
    <description>If Closed Won App id field must have value</description>
    <errorConditionFormula>AND( ISPICKVAL( StageName, &quot;Closed Won&quot;), ISBLANK( Application_ID__c ))</errorConditionFormula>
    <errorMessage>You must have an Application ID entered to change status to Won</errorMessage>
</ValidationRule>