force-app/main/default/objects/Opportunity/validationRules/Create_Lead_AccountLead.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Lead_AccountLead</fullName>
    <active>true</active>
    <errorConditionFormula>AND (OR (ISBLANK( Account.Name ),ISBLANK( Contact__c)), OR (ISBLANK( Lead__c )))</errorConditionFormula>
    <errorMessage>You must enter an Account and Contact or Lead to Proceed</errorMessage>
</ValidationRule>